--- a/index.html
+++ b/index.html
@@ -17,5 +17,12 @@
       <p>Deskripsi singkat tentang diri Anda.</p>
     </div>
   </section>
+  <!-- Section Social Media -->
+  <section class="social-media">
+    <h2>Media Sosial</h2>
+    <a href="https://www.facebook.com/">Facebook</a>
+    <a href="https://www.twitter.com/">Twitter</a>
+    <a href="https://www.instagram.com/">Instagram</a>
+  </section>
 </body>
 </html>
