--- a/index.html
+++ b/index.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Portofolio Saya</title>
-<link rel="stylesheet" href="./assets/css/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portofolio Saya</title>
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+
 <body>
-  <header>
-    <h1>Portofolio Saya</h1>
-  </header>
-  <section class="profile">
-    <img src="./assets//images/profile.png" alt="Foto Profil">
-    <div class="profile-info">
-      <h2>Hendar</h2>
-      <p>Deskripsi singkat tentang diri Anda.</p>
+    <header>
+        <h1>Portofolio Saya</h1>
+    </header>
+    <section class="profile">
+        <img src="./assets//images/profile.png" alt="Foto Profil">
+        <div class="profile-info">
+            <h2>Hendar</h2>
+            <p>Deskripsi singkat tentang diri Anda.</p>
+        </div>
+    </section>
+    <!-- Section Social Media -->
+    <section class="social-media">
+        <h2>Media Sosial</h2>
+        <a href="https://www.facebook.com/">Facebook</a>
+        <a href="https://www.twitter.com/">Twitter</a>
+        <a href="https://www.instagram.com/">Instagram</a>
+    </section>
+
+    <!-- Section portofolio -->
+    <section class="search-form">
+        <h2>Cari Proyek</h2>
+        <form action="#">
+            <input type="text" name="search" placeholder="Masukkan kata kunci">
+            <button type="submit">Cari</button>
+        </form>
+    </section>
+    <div class="container" id="portfolioContainer">
+        <!-- List portofolio akan ditambahkan oleh JavaScript di sini -->
     </div>
-  </section>
-  <!-- Section Social Media -->
-  <section class="social-media">
-    <h2>Media Sosial</h2>
-    <a href="https://www.facebook.com/">Facebook</a>
-    <a href="https://www.twitter.com/">Twitter</a>
-    <a href="https://www.instagram.com/">Instagram</a>
-  </section>
 </body>
+<script src="./assets/js/index.js"></script>
 </html>
