--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio Saya</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
-</head>
 
+    <style>
+    .search-form {
+        background-color: #161fc2 !important;
+    }
+    </style>
+</head>
 <body>
     <header>
         <h1>Portofolio Saya</h1>
@@ -20,7 +25,7 @@
         </div>
     </section>
     <!-- Section Social Media -->
-    <section class="social-media">
+    <section class="social-media background" >
         <h2>Media Sosial</h2>
         <a href="https://www.facebook.com/">Facebook</a>
         <a href="https://www.twitter.com/">Twitter</a>
@@ -28,16 +33,13 @@
     </section>
 
     <!-- Section portofolio -->
-    <section class="search-form">
+    <section class="search-form background">
         <h2>Cari Proyek</h2>
-        <form action="#">
-            <input type="text" name="search" placeholder="Masukkan kata kunci">
-            <button type="submit">Cari</button>
-        </form>
+        <input id="search" type="text" name="search" onkeyup="searchPortofolio()" placeholder="Masukkan kata kunci">
     </section>
     <div class="container" id="portfolioContainer">
-        <!-- List portofolio akan ditambahkan oleh JavaScript di sini -->
     </div>
+    <!-- End Section portofolio -->
 </body>
 <script src="./assets/js/index.js"></script>
 </html>
